added line chart